fix: scrollbar for file-list-body

--- a/common/loginpage/src/css/styles.less
+++ b/common/loginpage/src/css/styles.less
@@ -621,10 +621,8 @@ li.menu-item {
 
 .recent-panel-container {
   display: grid;
-  grid-template-rows: max-content max-content max-content max-content 1fr;
-  //grid-template-rows: 42px 208px 86px 182px 1fr;
-  grid-template-areas: 'search' 'template' 'welcome' 'dnd-zone' 'files';
-  //gap: 40px;
+  grid-auto-rows: max-content;
+  gap: 40px;
   position: relative;
   height: 100%;
   padding-inline: 32px;
@@ -634,25 +632,15 @@ li.menu-item {
   overflow: hidden;
 
   .search-bar {
-    grid-area: search;
-
     h1 {
       margin: 0;
     }
   }
 
   .files {
-    margin-top: 40px;
-    grid-area: files;
     display: flex;
     flex-direction: column;
     gap: 40px;
-    overflow-y: auto;
-  }
-
-  #area-dnd-file {
-    margin-top: 40px;
-    grid-area: dnd-zone;
   }
 }
 
@@ -680,8 +668,6 @@ li.menu-item {
 }
 
 #area-document-creation-grid {
-  grid-area: template;
-  margin-top: 40px;
   padding: 12px 16px 0; // 16px inner + outer 32px
   overflow-x: auto;
 
